stage0/tests/sema/veo/67_error_duplicate_method.veo
struct Dummy {}

impl Dummy {
    func test() {}
    // expected-error@+1: method 'test' is already defined in type 'Dummy'
    func test() {}
}
